; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/swig/extr_libwebp_python_wrap.c_EncodeLossy.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/swig/extr_libwebp_python_wrap.c_EncodeLossy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32, i32, float, i64 (i32*, i32, i32, i32, float, i32**)*, i32*, i32*)* @EncodeLossy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @EncodeLossy(i32* %0, i32 %1, i32 %2, i32 %3, float %4, i64 (i32*, i32, i32, i32, float, i32**)* %5, i32* %6, i32* %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca float, align 4
  %14 = alloca i64 (i32*, i32, i32, i32, float, i32**)*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i64, align 8
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store float %4, float* %13, align 4
  store i64 (i32*, i32, i32, i32, float, i32**)* %5, i64 (i32*, i32, i32, i32, float, i32**)** %14, align 8
  store i32* %6, i32** %15, align 8
  store i32* %7, i32** %16, align 8
  store i32* null, i32** %17, align 8
  %19 = load i64 (i32*, i32, i32, i32, float, i32**)*, i64 (i32*, i32, i32, i32, float, i32**)** %14, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* %11, align 4
  %23 = load i32, i32* %12, align 4
  %24 = load float, float* %13, align 4
  %25 = call i64 %19(i32* %20, i32 %21, i32 %22, i32 %23, float %24, i32** %17)
  store i64 %25, i64* %18, align 8
  %26 = load i64, i64* %18, align 8
  %27 = trunc i64 %26 to i32
  %28 = load i32*, i32** %15, align 8
  store i32 %27, i32* %28, align 4
  %29 = load i32*, i32** %16, align 8
  store i32 1, i32* %29, align 4
  %30 = load i64, i64* %18, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %8
  %33 = load i32*, i32** %17, align 8
  br label %35

34:                                               ; preds = %8
  br label %35

35:                                               ; preds = %34, %32
  %36 = phi i32* [ %33, %32 ], [ null, %34 ]
  ret i32* %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
